syntax = "proto3";

package one.realme.krot.net;

option java_package = "one.realme.krot.net"; //Specify the name of the package that generated the Java file
option java_outer_classname = "Protocol"; //Specify the class name of the generated Java file

enum MessageType {
    HANDSHAKE = 0;
    DISCONNECT = 1;
    PING = 2;
    PONG = 3;
    GET_DATA = 4;
    DATA = 5;
}

enum Reason {
    NO_REASON = 0;
    NO_HANDSHAKE = 1;
    DUPLICATE = 2;
    WRONG_VERSION = 3;
}

message Message {
    int32 version = 1;
    MessageType type = 2;

    HandShake handShake = 3;
    Disconnect disconnect = 4;
    Ping ping = 5;
    Pong pong = 6;
    GetData getData = 7;
    Data data = 8;
}

message Ping {
    int64 nonce = 1;
}

message Pong {
    int64 nonce = 1;
}

message HandShake {
    bytes nodeId = 1; // The node identity
    int32 timestamp = 2; //
    int64 height = 3; // The last block received by the emitting node
    string os = 4; // runtime os
    string agent = 5; // runtime instance name
}

message Disconnect {
    bytes nodeId = 1;
    Reason reason = 2;
}

enum DataType {
    BLK = 0;  // avoid block in proto
    TRX = 1;  // avoid tx in proto
}

message GetData {
    DataType type = 1;
    int64 skip = 2;
    int64 limit = 3; // max is 500
}

message Block {
    int64 height = 1;
    bytes prevBlockHash = 2;
    int32 timestamp = 3;
    bytes merkleRootHash = 4;
    bytes hash = 5;
}

message Tx {
    bytes from = 1;
    bytes to = 2;
    int64 amount = 3;
    string signature = 4;
    int32 timestamp = 5;
    bytes payload = 6;
}

message Data {
    DataType type = 1;
    repeated Block blocks = 2;
    repeated Tx txs = 3;
}